--- a/game/scripts/npc/abilities/worker_deposit_payload.kv
+++ b/game/scripts/npc/abilities/worker_deposit_payload.kv
@@ -1,9 +1,3 @@
-///                                                           ///
-/// ModDota AbilityLuaSpellLibrary spells for Meepo           ///
-///                                                           ///
-/// Last Update: 7.07c                                        ///
-///                                                           ///
-
 "DOTAAbilities"
 {
     //=================================================================================================================
@@ -18,7 +12,7 @@
         "AbilityTextureName"            "acolyte"
         "AbilityBehavior"               "DOTA_ABILITY_BEHAVIOR_UNIT_TARGET"
         "AbilityUnitTargetTeam"         "DOTA_UNIT_TARGET_TEAM_FRIENDLY"
-        "AbilityUnitTargetType"         "DOTA_UNIT_TARGET_BASIC"
+        "AbilityUnitTargetType"         "DOTA_UNIT_TARGET_BASIC | DOTA_UNIT_TARGET_HERO"
         "SpellImmunityType"             "SPELL_IMMUNITY_ENEMIES_YES"
         "SpellDispellableType"          "SPELL_DISPELLABLE_YES"
         "FightRecapLevel"               "1"
@@ -27,6 +21,7 @@
         // Casting
         //-------------------------------------------------------------------------------------------------------------
         "AbilityCastPoint"              "0.6"
+        "AbilityCastAnimation"          "ACT_DOTA_ATTACK"
         "AbilityCastRange"              "100"
 
         // Time
@@ -37,17 +32,5 @@
         //-------------------------------------------------------------------------------------------------------------
         "AbilityManaCost"               "0"
 
-        // Special
-        //-------------------------------------------------------------------------------------------------------------
-        "AbilitySpecial"
-        {
-            "01"
-            {
-                "var_type"              "FIELD_INTEGER"
-                "train_duration"              "10"
-            }
-
-        }
-        "AbilityCastAnimation"      "ACT_DOTA_ATTACK"
     }
 }
